# lunaria

./: .editorconfig  .gitignore  CMakeLists.txt  script.sh
iso/boot/grub/: grub.cfg
src/: CMakeLists.txt  boot.asm  kernel.c  video.c  video.h
src/libk/: string.c  string.h
